syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

service UserService {
    rpc CreateUser (User) returns (ProtoUser);
    rpc FindAllUsers (google.protobuf.Empty) returns (Users);
    rpc FindOneUser (OneUser) returns (ProtoUser);
    rpc UpdateUser (UpdateOneUser) returns (ProtoUser);
    rpc DeleteUser (OneUser) returns (google.protobuf.Empty);
    rpc Login (LoginRequest) returns (OneUser);
}

message User {
    string Username = 1;
    string FirstName = 2;
    string LastName = 3;
    string Email = 4;
    string StravaEmail = 5;
    string Password = 6;
}

message ProtoUser {
    int32 UserID = 1;
    string Username = 2;
    string FirstName = 3;
    string LastName = 4;
    string Email = 5;
    string StravaEmail = 6;
}

message Users {
    repeated ProtoUser users = 1;
}

message OneUser {
    int32 UserID = 1;
}

message UpdateOneUser {
    int32 UserID = 1;
    optional string Username = 2;
    optional string FirstName = 3;
    optional string LastName = 4;
    optional string Email = 5;
    optional string StravaEmail = 6;
    optional string Password = 7;
}

message LoginRequest {
    string Username = 1;    
    string Password = 2; 
}
